@@ -1,12 +1,12 @@
 package modules.admin.Tag.actions;
 
-import modules.admin.domain.Tag;
-
 import org.skyve.CORE;
 import org.skyve.metadata.controller.ServerSideAction;
 import org.skyve.metadata.controller.ServerSideActionResult;
 import org.skyve.persistence.Persistence;
 import org.skyve.web.WebContext;
+
+import modules.admin.domain.Tag;
 
 public class Clear implements ServerSideAction<Tag> {
 	/**
@@ -30,8 +30,8 @@ public class Clear implements ServerSideAction<Tag> {
 		Persistence persistence = CORE.getPersistence();
 		persistence.newSQL(deleteSQL.toString()).execute();
 		
-		bean.setUploadTagged(new Long(0));
-		bean.setTotalTagged(new Long(0));
+		bean.setUploadTagged(Long.valueOf(0));
+		bean.setTotalTagged(Long.valueOf(0));
 		
 		return new ServerSideActionResult<>(bean);
 	}
